--- a/stm32f103_ll_library06_usart/MDK-ARM/stm32f103cbtx/stm32f103cbtx.build_log.htm
+++ b/stm32f103_ll_library06_usart/MDK-ARM/stm32f103cbtx/stm32f103cbtx.build_log.htm
@@ -26,10 +26,22 @@ Project File Date:  02/28/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'stm32f103cbtx'
+Rebuild target 'stm32f103cbtx'
+compiling stm32f1xx_ll_pwr.c...
+compiling stm32f1xx_ll_gpio.c...
 compiling main.c...
+compiling stm32f1xx_it.c...
+compiling usart.c...
+compiling gpio.c...
+assembling startup_stm32f103xb.s...
+compiling stm32f1xx_ll_exti.c...
+compiling stm32f1xx_ll_dma.c...
+compiling stm32f1xx_ll_usart.c...
+compiling stm32f1xx_ll_utils.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_ll_rcc.c...
 linking...
-Program Size: Code=2986 RO-data=310 RW-data=4 ZI-data=1036  
+Program Size: Code=1596 RO-data=284 RW-data=4 ZI-data=1036  
 FromELF: creating hex file...
 "stm32f103cbtx\stm32f103cbtx.axf" - 0 Error(s), 0 Warning(s).
 
