--- a/stm32f103_ll_library06_usart_interrupt/MDK-ARM/stm32f103cbtx/stm32f103cbtx.build_log.htm
+++ b/stm32f103_ll_library06_usart_interrupt/MDK-ARM/stm32f103cbtx/stm32f103cbtx.build_log.htm
@@ -26,10 +26,22 @@ Project File Date:  03/03/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'stm32f103cbtx'
+Rebuild target 'stm32f103cbtx'
 compiling main.c...
+compiling stm32f1xx_ll_pwr.c...
+compiling usart.c...
+compiling stm32f1xx_it.c...
+compiling gpio.c...
+compiling stm32f1xx_ll_gpio.c...
+assembling startup_stm32f103xb.s...
+compiling stm32f1xx_ll_exti.c...
+compiling stm32f1xx_ll_dma.c...
+compiling stm32f1xx_ll_usart.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_ll_rcc.c...
+compiling stm32f1xx_ll_utils.c...
 linking...
-Program Size: Code=3436 RO-data=292 RW-data=4 ZI-data=1108  
+Program Size: Code=1888 RO-data=268 RW-data=4 ZI-data=1108  
 FromELF: creating hex file...
 "stm32f103cbtx\stm32f103cbtx.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +67,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
