--- a/stm32f103_ll_library10_usart_dma_rx_interrupt/MDK-ARM/stm32f103cbtx/stm32f103cbtx.build_log.htm
+++ b/stm32f103_ll_library10_usart_dma_rx_interrupt/MDK-ARM/stm32f103cbtx/stm32f103cbtx.build_log.htm
@@ -21,15 +21,28 @@ Target DLL:      Segger\JL2CM3.dll V2.99.43.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\Coding\MCU_Develop\stm32f103_ll_library09_usart_dma_rec_with_ilde\MDK-ARM\stm32f103cbtx.uvprojx
+D:\Coding\MCU_Develop\stm32f103_ll_library10_usart_dma_rx_interrupt\MDK-ARM\stm32f103cbtx.uvprojx
 Project File Date:  03/06/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'stm32f103cbtx'
+Rebuild target 'stm32f103cbtx'
+assembling startup_stm32f103xb.s...
+compiling stm32f1xx_it.c...
+compiling stm32f1xx_ll_gpio.c...
+compiling gpio.c...
+compiling dma.c...
 compiling main.c...
+compiling usart.c...
+compiling stm32f1xx_ll_pwr.c...
+compiling stm32f1xx_ll_dma.c...
+compiling stm32f1xx_ll_exti.c...
+compiling stm32f1xx_ll_usart.c...
+compiling stm32f1xx_ll_rcc.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_ll_utils.c...
 linking...
-Program Size: Code=5068 RO-data=316 RW-data=4 ZI-data=5140  
+Program Size: Code=5384 RO-data=316 RW-data=4 ZI-data=3084  
 FromELF: creating hex file...
 "stm32f103cbtx\stm32f103cbtx.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +68,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
