--- a/stm32f103_ll_library08_usart_dma_send/MDK-ARM/stm32f103cbtx/stm32f103cbtx.build_log.htm
+++ b/stm32f103_ll_library08_usart_dma_send/MDK-ARM/stm32f103cbtx/stm32f103cbtx.build_log.htm
@@ -27,9 +27,21 @@ Project File Date:  03/05/2025
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'stm32f103cbtx'
+compiling stm32f1xx_ll_dma.c...
+compiling stm32f1xx_ll_gpio.c...
+compiling usart.c...
 compiling stm32f1xx_it.c...
+compiling dma.c...
+compiling gpio.c...
+compiling main.c...
+compiling stm32f1xx_ll_pwr.c...
+compiling stm32f1xx_ll_rcc.c...
+compiling stm32f1xx_ll_exti.c...
+compiling stm32f1xx_ll_utils.c...
+compiling stm32f1xx_ll_usart.c...
+compiling system_stm32f1xx.c...
 linking...
-Program Size: Code=2840 RO-data=268 RW-data=4 ZI-data=1172  
+Program Size: Code=2852 RO-data=268 RW-data=4 ZI-data=1172  
 FromELF: creating hex file...
 "stm32f103cbtx\stm32f103cbtx.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +67,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
