--- a/stm32f103_ll_library10_usart_dma_rx_interrupt/MDK-ARM/stm32f103cbtx/stm32f103cbtx.build_log.htm
+++ b/stm32f103_ll_library10_usart_dma_rx_interrupt/MDK-ARM/stm32f103cbtx/stm32f103cbtx.build_log.htm
@@ -26,23 +26,10 @@ Project File Date:  03/06/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'stm32f103cbtx'
-compiling gpio.c...
-compiling stm32f1xx_ll_gpio.c...
-compiling dma.c...
+Build target 'stm32f103cbtx'
 compiling main.c...
-compiling usart.c...
-compiling stm32f1xx_it.c...
-assembling startup_stm32f103xb.s...
-compiling stm32f1xx_ll_dma.c...
-compiling stm32f1xx_ll_pwr.c...
-compiling stm32f1xx_ll_exti.c...
-compiling stm32f1xx_ll_rcc.c...
-compiling stm32f1xx_ll_utils.c...
-compiling stm32f1xx_ll_usart.c...
-compiling system_stm32f1xx.c...
 linking...
-Program Size: Code=5456 RO-data=316 RW-data=4 ZI-data=3092  
+Program Size: Code=5442 RO-data=314 RW-data=4 ZI-data=3084  
 FromELF: creating hex file...
 "stm32f103cbtx\stm32f103cbtx.axf" - 0 Error(s), 0 Warning(s).
 
@@ -68,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
