--- a/stm32f103_ll_library12_Can_Send/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/stm32f103_ll_library12_Can_Send/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -26,10 +26,19 @@ Project File Date:  03/18/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'stm32f103zet6'
+Rebuild target 'stm32f103zet6'
+compiling stm32f1xx_ll_pwr.c...
+compiling stm32f1xx_ll_exti.c...
+compiling stm32f1xx_ll_gpio.c...
+compiling gpio.c...
+assembling startup_stm32f103xe.s...
+compiling stm32f1xx_it.c...
 compiling main.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_ll_rcc.c...
+compiling stm32f1xx_ll_utils.c...
 linking...
-Program Size: Code=1572 RO-data=336 RW-data=4 ZI-data=1028  
+Program Size: Code=1584 RO-data=336 RW-data=4 ZI-data=1028  
 FromELF: creating hex file...
 "stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
