--- a/stm32f103_ll_library17_Can_Send_Error_IT/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/stm32f103_ll_library17_Can_Send_Error_IT/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -26,8 +26,18 @@ Project File Date:  03/31/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'stm32f103zet6'
+Rebuild target 'stm32f103zet6'
+compiling stm32f1xx_ll_exti.c...
+compiling stm32f1xx_ll_pwr.c...
+compiling gpio.c...
+assembling startup_stm32f103xe.s...
+compiling stm32f1xx_ll_gpio.c...
+compiling stm32f1xx_it.c...
 compiling main.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_ll_rcc.c...
+compiling stm32f1xx_ll_utils.c...
+compiling myCanDrive_reg.c...
 linking...
 Program Size: Code=2120 RO-data=336 RW-data=4 ZI-data=1044  
 FromELF: creating hex file...
@@ -55,7 +65,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
