--- a/stm32f103_hal_library18_Can_Rec_Overflow_Error/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/stm32f103_hal_library18_Can_Rec_Overflow_Error/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -26,32 +26,7 @@ Project File Date:  04/10/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'stm32f103zet6'
-compiling stm32f1xx_hal_msp.c...
-compiling stm32f1xx_hal_gpio_ex.c...
-compiling main.c...
-compiling stm32f1xx_it.c...
-compiling can.c...
-compiling gpio.c...
-assembling startup_stm32f103xe.s...
-compiling stm32f1xx_ll_exti.c...
-compiling stm32f1xx_ll_gpio.c...
-compiling stm32f1xx_hal.c...
-compiling stm32f1xx_ll_rcc.c...
-compiling stm32f1xx_ll_utils.c...
-compiling stm32f1xx_hal_can.c...
-compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_flash.c...
-compiling stm32f1xx_hal_flash_ex.c...
-compiling stm32f1xx_hal_tim.c...
-compiling system_stm32f1xx.c...
-compiling stm32f1xx_hal_exti.c...
-compiling stm32f1xx_hal_tim_ex.c...
+Build target 'stm32f103zet6'
 compiling myCanDrive.c...
 linking...
 Program Size: Code=4364 RO-data=336 RW-data=12 ZI-data=1124  
@@ -80,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
