--- a/stm32f103_reg_library22_Basic_Timer/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/stm32f103_reg_library22_Basic_Timer/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -26,23 +26,10 @@ Project File Date:  04/29/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'stm32f103zet6'
-compiling stm32f1xx_ll_pwr.c...
-compiling stm32f1xx_ll_gpio.c...
-compiling gpio.c...
-compiling stm32f1xx_ll_exti.c...
-compiling stm32f1xx_it.c...
-compiling main.c...
-assembling startup_stm32f103xe.s...
-compiling system_stm32f1xx.c...
-compiling stm32f1xx_ll_rcc.c...
-compiling lwrb_ex.c...
-compiling stm32f1xx_ll_utils.c...
-compiling lwrb.c...
+Build target 'stm32f103zet6'
 compiling myUsartDrive_reg.c...
-compiling myCanDrive_reg.c...
 linking...
-Program Size: Code=3804 RO-data=336 RW-data=4 ZI-data=3172  
+Program Size: Code=3856 RO-data=336 RW-data=4 ZI-data=4220  
 FromELF: creating hex file...
 "stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
@@ -68,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
